Design sudah fungsional
text dapat diterima oleh text area,belum terkoneksi secara client & server

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /ChatApp/nbproject/private/
 /ChatApp/build/
 /ChatApp/dist/
+/TEst/nbproject/private/
+/TEst/build/
+/TEst/dist/
+/chapp/build/
+/chapp/dist/
+/chapp/nbproject/private/
